Made modular by adding Controllers

--- a/backend/views/index.html
+++ b/backend/views/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="server.js"></script>
-    <h1>Hello World!</h1>
+    <h1>HELLO WORLD</h1>
   </body>
 </html>
